--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.406"
-            android:max="255"/>
+            android:max="255"
+            android:theme="@style/SeekBarMy"/>
     <SeekBar
             android:layout_width="313dp"
             android:layout_height="22dp"
