--- a/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,78 @@
         android:id="@+id/Layout1"
         android:background="@android:color/black">
 
+    <SeekBar
+            android:layout_width="313dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.8"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="100"
+    />
+    <SeekBar
+            android:layout_width="313dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar5"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.7"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="100"
+    />
+    <SeekBar
+            android:layout_width="314dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar6"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.6"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="360"
+    />
+    <SeekBar
+            android:layout_width="313dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.4"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="255"
+            android:theme="@style/SeekBarBlue"/>
+    <SeekBar
+            android:layout_width="313dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar2"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.3"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="255"
+            android:theme="@style/SeekBarGreen"/>
+    <SeekBar
+            android:layout_width="314dp"
+            android:layout_height="22dp"
+            android:id="@+id/seekBar3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.2"
+            app:layout_constraintHorizontal_bias="0.5"
+            android:max="255"
+            android:theme="@style/SeekBarRed"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -20,7 +92,37 @@
             android:id="@+id/textView"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.47"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/r_g_b"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/textView3"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.1"/>
+    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/h_s_v"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/textView4"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/white"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.9"/>
     <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,42 +135,8 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@android:color/white"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintVertical_bias="0.534"/>
-    <SeekBar
-            android:layout_width="313dp"
-            android:layout_height="22dp"
-            android:id="@+id/seekBar"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.406"
-            android:max="255"
-            android:theme="@style/SeekBarBlue"/>
-    <SeekBar
-            android:layout_width="313dp"
-            android:layout_height="22dp"
-            android:id="@+id/seekBar2"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3"
-            android:max="255"
-            android:theme="@style/SeekBarGreen"/>
-    <SeekBar
-            android:layout_width="314dp"
-            android:layout_height="22dp"
-            android:id="@+id/seekBar3"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.201"
-            android:max="255"
-            app:layout_constraintHorizontal_bias="0.505"
-            android:theme="@style/SeekBarRed"/>
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintVertical_bias="0.53"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
