--- a/MyApplication/app/src/main/res/values/styles.xml
+++ b/MyApplication/app/src/main/res/values/styles.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
@@ -17,6 +17,9 @@
     </style>
     <style name="SeekBarBlue">
         <item name="colorAccent">#0000ff</item>
+    </style>
+    <style name="SeekBarHue" parent="Widget.AppCompat.SeekBar">
+        <item name="android:backgroundTint">@android:color/transparent</item>
     </style>
 
 </resources>
