--- a/Appandro/app/src/main/res/layout/activity_main.xml
+++ b/Appandro/app/src/main/res/layout/activity_main.xml
@@ -9,11 +9,43 @@
 
     <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="23dp"
             android:text="Hello World!"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.112" android:id="@+id/textView"
+    />
+    <Button
+            android:text="Second Activity Start"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintHorizontal_bias="0.95"
+            app:layout_constraintVertical_bias="0.976"/>
+    <EditText
+            android:layout_width="130dp"
+            android:layout_height="42dp"
+            android:inputType="textPersonName"
+            android:text=""
+            android:ems="10"
+            android:id="@+id/editText2"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
+            app:layout_constraintBottom_toTopOf="@+id/button" app:layout_constraintVertical_bias="0.463"
+            style="@android:style/Widget.Material.Light.EditText"/>
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button36" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.792" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editText2" app:layout_constraintBottom_toTopOf="@+id/button"
+            app:layout_constraintVertical_bias="0.896"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
